Fixed alignment of random pictures, created quote, and call to action

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h2 {
 }
 
 .whitespace {
-    height: 1500px;
+    height: 2000px;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -93,12 +93,36 @@ h2 {
 
 .whitespace2 {
     flex:auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
 }
 
 .grayspace {
     flex:auto;
     background-color:rgb(163, 163, 163) ;
+    padding-left: 150px;
+    padding-right: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+.grayspace p {
+    font-size: 36px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 0px;
+}
+
+.grayspace h4 {
+    font-size: 32px;
+    font-weight: 100;
+    align-self: end;
+    margin: 0px;
+}
+
 
 .infobox img {
     width: 200px;
@@ -139,4 +163,34 @@ h2 {
     margin: -50px;
     font-family:'Times New Roman', Times, serif;
    
+}
+
+.actioncall {
+    display: flex;
+    height: 120px;
+    width: 900px;
+    background-color:#3882F6;
+    border-radius: 15px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.actioncall .text {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+
+.text h2 {
+    font-size: 28px;
+    margin: 5px;
+    margin-bottom: 0px;
+
+}
+
+.actioncall button {
+    background-color: white;
+    color:#3882F6;
+    width: 100px;
+    margin: 0px 20px 0px 0px;
 }
